# json-handle-mac

./: .gitignore  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
.github/workflows/: release.yml
scripts/: sync-versions.cjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  tabs.tsx  textarea.tsx  tree-view.tsx
