[package]
name = "json-handle"
version = "0.1.7"
description = "A local JSON Handle app built with Tauri"
authors = ["gexiaowei"]
edition = "2021"

[lib]
name = "json_handle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

